<resources>
    <string name="app_name">GooglePlayClone</string>
    <string name="micsearch">MicSearch</string>
    <string name="tab_one">For you</string>
    <string name="tab_two">Top Charts</string>
    <string name="tab_three">Categories</string>
    <string name="tab_four">Genres</string>
    <string name="tab_five">Editor\'s Choice</string>
    <string name="heading">Heading</string>
    <string name="subheading">SubHeading</string>
    <string name="more_button">MORE</string>
    <string name="card_app_name">App Name</string>
    <string name="sample_rating">4.3</string>
    <string name="free">FREE</string>
    <string name="card_numbering">1/5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="show_installed_apps">Show installed apps</string>
    <string name="demo_size">46MB</string>

    <string name="app_header_name">Udacity - Clone Learning</string>
    <string name="app_dev_name">Udacity, Inc</string>
    <string name="app_three_plus">3+</string>
    <string name="app_size">29MB</string>
    <string name="install_button">Install</string>
    <string name="downloads">Downloads</string>
    <string name="sample_users">21,831</string>
    <string name="sample_category">Education</string>
    <string name="sample_similar">Similar</string>
    <string name="million">MILLION</string>
    <string name="sample_downloads">10</string>
    <string name="education">Education</string>
    <string name="_4_3">4.3</string>
    <string name="app_desc">Prepare yourself for the jobs of today, tomorrow and beyond with Udacity</string>
    <string name="read_more">READ MORE</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="submit">SUBMIT</string>
    <string name="sample_date">02/04/218</string>
    <string name="all_reviews">ALL REVIEWS</string>
    <string name="my_apps_and_games">My apps and games</string>
    <string name="my_notifications">My notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="musics">Musics</string>
    <string name="newsstand">Newsstand</string>
    <string name="account">Account</string>
    <string name="redeem">Redeem</string>
    <string name="wishlist">Wishlist</string>
    <string name="play_protect">Play Protect</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="parent_guide">Parent Guide</string>
    <string name="about_google_play">About Google Play</string>
    <string name="demo_download_size">2.96MB/5.26MB</string>
    <string name="demo_download_percent">56%</string>
    <string name="button_open">OPEN</string>
    <string name="button_uninstall">UNINSTALL</string>
    <string name="top_categories">Top categories</string>
    <string name="all_categories">All categories</string>
</resources>
