<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/CardView"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:id="@+id/cardViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pop_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/card_image_1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@drawable/bg_rounded_rect"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/card_numbering"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/pop_item_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/pop_item_sub_header"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/heading"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pop_item_sub_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/heading"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </RelativeLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>

